num_enum/tests/try_build/compile_fail/variants_with_fields.stderr
error: Enum variants used with the `num_enum` crate must not contain fields, but `Number::NonZero` had fields.
 --> $DIR/variants_with_fields.rs:7:5
  |
7 |     NonZero(u8),
  |     ^^^^^^^

error: Enum variants used with the `num_enum` crate must not contain fields, but `Colour::Red` had fields.
  --> $DIR/variants_with_fields.rs:13:5
   |
13 |     Red { intensity: u8 },
   |     ^^^

error: Enum variants used with the `num_enum` crate must not contain fields, but `Meaningless::Beep` had fields.
  --> $DIR/variants_with_fields.rs:19:5
   |
19 |     Beep(),
   |     ^^^^
